한쪽 수정하면 한쪽인 깨지는 근본적인 원인 수정

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -158,7 +158,14 @@
     "shipped": "Shipped",
     "sms_notifications": "Sms Notifications",
     "sms_notifications_desc": "Sms Notifications Desc",
-    "status": "Status",
+    "status": {
+      "Confirmed": "Confirmed",
+      "cancelled": "Cancelled",
+      "confirmed": "Confirmed",
+      "delivered": "Delivered",
+      "processing": "Processing",
+      "shipped": "Shipped"
+    },
     "status_label": "Status Label",
     "super_user_access": "Super User Access",
     "support_email": "Support Email",
@@ -183,7 +190,16 @@
     "yes": "Yes",
     "your_order_is_currently_being": "Your order is currently {{status}}",
     "zipcode": "Zipcode",
-    "zipcode_required": "Zipcode Required"
+    "zipcode_required": "Zipcode Required",
+    "add_card": "Add Card",
+    "card_added": "Card has been added",
+    "card_deleted": "Card has been deleted",
+    "delete_card": "Delete Card",
+    "delete_card_confirm": "Are you sure you want to delete this card?",
+    "no_payment_methods": "No payment methods registered",
+    "delete_orders": "Delete Selected",
+    "delete_orders_confirm": "Are you sure you want to delete the selected order history?\nThis action cannot be undone.",
+    "shipping_address": "Shipping Address"
   },
   "admin": {
     "analytics": {
@@ -268,7 +284,10 @@
       "delete_order": "Delete Order",
       "close": "Close",
       "deleting": "Deleting...",
-      "delete_count_orders": "Delete {{count}} Orders"
+      "delete_count_orders": "Delete {{count}} Orders",
+      "delete_selected": "Delete Selected",
+      "edit": "Edit",
+      "delete": "Delete"
     },
     "empty": {
       "title": "No orders",
@@ -385,7 +404,11 @@
     "login": "Login",
     "logout": "Logout",
     "register": "Register",
-    "sign_out": "Sign Out"
+    "sign_out": "Sign Out",
+    "logout_error": "An error occurred while logging out.",
+    "logout_success": "You have been logged out.",
+    "sign_out_of_account": "Sign out of your account",
+    "view_profile": "View Profile"
   },
   "banner": {
     "buy_now": "Buy Now",
@@ -461,7 +484,148 @@
     "order_summary": "Order Summary",
     "total_amount": "Total Amount",
     "payment_method": "Payment Method",
-    "processing": "Processing"
+    "processing": "Processing",
+    "account_security": "Account Security",
+    "address_line_1": "Address Line 1",
+    "address_line_2": "Address Line 2 (Optional)",
+    "advertising": "Advertising",
+    "agree_to_terms": "I agree to the terms and conditions",
+    "analytics": "Analytics",
+    "annually": "Annually",
+    "apple_pay": "Apple Pay",
+    "apply_coupon": "Apply",
+    "back_in_stock": "Back in Stock Alert",
+    "bank_transfer": "Bank Transfer",
+    "billing_address": "Billing Address",
+    "billing_details": "Billing Details",
+    "billing_info": "Billing Information",
+    "billing_zip": "Billing Zip Code",
+    "card_number": "Card Number",
+    "cardholder_name": "Cardholder Name",
+    "cash_on_delivery": "Cash on Delivery",
+    "cash_on_delivery_desc": "Pay upon delivery",
+    "change_payment": "Change Payment Method",
+    "checkout_process": "Checkout Process",
+    "city": "City",
+    "company": "Company",
+    "complete_order": "Complete Order",
+    "confirm_cash_on_delivery": "Confirm Cash on Delivery",
+    "confirm_order": "Confirm Order",
+    "contact_info": "Contact Information",
+    "contact_preferences": "Contact Preferences",
+    "cookie_policy": "Cookie Policy",
+    "country": "Country",
+    "coupon_code": "Coupon Code",
+    "credit_card": "Credit Card",
+    "custom": "Custom",
+    "cvv": "CVV",
+    "daily": "Daily",
+    "data_usage": "Data Usage",
+    "debit_card": "Debit Card",
+    "delivery_instructions": "Delivery Instructions",
+    "different_billing": "Use Different Billing Address",
+    "digest": "Digest",
+    "discount": "Discount",
+    "email": "Email",
+    "estimated_delivery": "Estimated Delivery",
+    "expiry_date": "Expiry Date",
+    "express_shipping": "Express Shipping",
+    "first_name": "First Name",
+    "frequency": "Frequency",
+    "full_name": "Full Name",
+    "full_refund": "Full Refund",
+    "gift_card": "Gift Card",
+    "gift_message": "Gift Message",
+    "google_pay": "Google Pay",
+    "immediately": "Immediately",
+    "installment": "Installment",
+    "items_total": "Items Total",
+    "kakao_pay": "Kakao Pay",
+    "last_name": "Last Name",
+    "login_alerts": "Login Alerts",
+    "manage_preferences": "Manage Preferences",
+    "marketing_emails": "Marketing Emails",
+    "mobile_payment": "Mobile Payment",
+    "monthly": "Monthly",
+    "monthly_payment": "Monthly Payment",
+    "naver_pay": "Naver Pay",
+    "never": "Never",
+    "new_card": "New Card",
+    "newsletter_signup": "Newsletter Signup",
+    "opt_out": "Opt Out",
+    "order_confirmation": "Order Confirmation",
+    "order_date": "Order Date",
+    "order_items": "Items ({{count}})",
+    "order_number": "Order Number",
+    "order_placed": "Your order has been placed",
+    "order_review": "Order Review",
+    "order_updates": "Order Updates",
+    "partial_refund": "Partial Refund",
+    "password_changes": "Password Changes",
+    "pay_in_full": "Pay in Full",
+    "pay_with_card": "Pay with Card",
+    "payment_declined": "Payment Declined",
+    "payment_error": "Payment Error",
+    "payment_failed": "Payment Failed",
+    "payment_options": "Payment Options",
+    "payment_processing": "Payment Processing",
+    "payment_successful": "Payment Successful",
+    "paypal": "PayPal",
+    "personalization": "Personalization",
+    "phone": "Phone Number",
+    "place_order": "Place Order",
+    "points": "Points",
+    "price_drop": "Price Drop Alert",
+    "privacy_policy": "Privacy Policy",
+    "processing_order": "Processing Order",
+    "product_recommendations": "Product Recommendations",
+    "promotional_offers": "Promotional Offers",
+    "quarterly": "Quarterly",
+    "real_time": "Real-time",
+    "refund": "Refund",
+    "refund_completed": "Refund Completed",
+    "refund_policy": "Refund Policy",
+    "refund_processing": "Refund Processing",
+    "retry_payment": "Retry Payment",
+    "review_reminders": "Review Reminders",
+    "same_as_shipping": "Same as Shipping Address",
+    "samsung_pay": "Samsung Pay",
+    "save_card": "Save Card Information",
+    "scheduled": "Scheduled",
+    "secure_payment": "Secure Payment",
+    "secure_payment_via_stripe": "Secure Payment via Stripe",
+    "select_payment_method": "Select Payment Method",
+    "shipping_info": "Shipping Information",
+    "shipping_method": "Shipping Method",
+    "sms_notifications": "SMS Notifications",
+    "special_instructions": "Special Instructions",
+    "split_payment": "Split Payment",
+    "ssl_encrypted": "SSL Encrypted",
+    "standard_shipping": "Standard Shipping",
+    "state": "State",
+    "step": "Step",
+    "step_1": "Step 1",
+    "step_2": "Step 2",
+    "step_3": "Step 3",
+    "step_4": "Step 4",
+    "store_credit": "Store Credit",
+    "suspicious_activity": "Suspicious Activity",
+    "tax": "Tax",
+    "terms_and_conditions": "Terms and Conditions",
+    "thank_you": "Thank You",
+    "third_party": "Third Party",
+    "title": "Checkout",
+    "toss": "Toss",
+    "toss_payments": "Toss Payments",
+    "toss_payments_desc": "Easy payment (Credit card, Bank transfer, Mobile, etc.)",
+    "total": "Total",
+    "tracking_number": "Tracking Number",
+    "unsubscribe": "Unsubscribe",
+    "use_saved_card": "Use Saved Card",
+    "virtual_account": "Virtual Account",
+    "weekly": "Weekly",
+    "wishlist_updates": "Wishlist Updates",
+    "zip_code": "Zip Code"
   },
   "categories": {
     "appliances_kr_name": "Appliances",
@@ -566,7 +730,9 @@
     "womens_watches_desc": "Elegant timepieces for women",
     "womens_watches_name": "Women's Watches",
     "불교_name": "Religious",
-    "불교용품_name": "Religious Items"
+    "불교용품_name": "Religious Items",
+    "page_title": "Product Categories",
+    "스포츠_name": "Sports"
   },
   "common": {
     "add_to_cart": "Add to Cart",
@@ -591,7 +757,39 @@
     "shop_now": "Shop Now",
     "updating": "Updating...",
     "view_all_categories": "View All Categories",
-    "view_more": "View More"
+    "view_more": "View More",
+    "about": "About",
+    "actions": "Actions",
+    "added_to_cart": "Added to cart!",
+    "adding_to_cart": "Adding...",
+    "admin_dashboard": "Admin Dashboard",
+    "brand": "Brand",
+    "category": "Category",
+    "close": "Close",
+    "date": "Date",
+    "delete": "Delete",
+    "delete_selected": "Delete Selected",
+    "deleting": "Deleting...",
+    "download": "Download",
+    "edit": "Edit",
+    "filter": "Filter",
+    "in_cart": "In Cart",
+    "in_category": "Category:",
+    "nothing_matched_with": "No results matched:",
+    "open": "Open",
+    "optional": "Optional",
+    "out_of_stock": "Out of Stock",
+    "please_try_again": "Please try again with different keywords",
+    "privacy": "Privacy Policy",
+    "searching_for": "Searching for \"{{query}}\"...",
+    "trending_products": "Trending Products",
+    "start_shopping": "Start Shopping",
+    "support": "Support",
+    "terms": "Terms of Service",
+    "try_again": "Try Again",
+    "unit_price": "Unit Price",
+    "version": "Version",
+    "view": "View"
   },
   "filters": {
     "no_colors": "No colors available",
@@ -648,7 +846,36 @@
     "special_offers": "Special Offers",
     "special_offers_sub": "Don't miss out on these exclusive discounts",
     "unable_to_load_categories": "Unable to load categories at the moment. Please try again later.",
-    "up_to_off": "Up to 50% Off"
+    "up_to_off": "Up to 50% Off",
+    "all_categories": "All Categories",
+    "any_discount": "Any Discount",
+    "category": "Category",
+    "clear_all_filters": "Clear All Filters",
+    "clear_filters": "Clear Filters",
+    "exclusive_deals": "Exclusive Deals",
+    "filter_by_category": "Filter by Category",
+    "filters": "Filters",
+    "highest_discount": "Highest Discount",
+    "highest_rated": "Highest Rated",
+    "hurry_up_deals": "Hurry up! Amazing deals ending soon",
+    "load_more_offers": "Load More Offers",
+    "lowest_discount": "Lowest Discount",
+    "maximum_discount": "Maximum Discount",
+    "min_discount": "Min Discount",
+    "minimum_discount": "Minimum Discount",
+    "name_a_to_z": "Name A to Z",
+    "no_offers_found": "No offers found matching your criteria.",
+    "offers_found": "{{count}} offers found",
+    "percent_10_or_more": "10% or more",
+    "percent_20_or_more": "20% or more",
+    "percent_30_or_more": "30% or more",
+    "percent_40_or_more": "40% or more",
+    "percent_50_or_more": "50% or more",
+    "percent_off": "% OFF",
+    "price_high_to_low": "Price: High to Low",
+    "price_low_to_high": "Price: Low to High",
+    "sort_by": "Sort By",
+    "try_adjusting_filters": "Try adjusting your filters to find different products."
   },
   "navigation": {
     "cart": "Cart",
@@ -656,7 +883,8 @@
     "home": "Home",
     "offers": "Offers",
     "orders": "Orders",
-    "products": "Products"
+    "products": "Products",
+    "menu": "Menu"
   },
   "product": {
     "add_to_favorite": "Add to favorites",
@@ -675,7 +903,9 @@
     "view_details": "View details",
     "viewers_watching": "Over {{count}} people are watching this item right now",
     "you_are_saving": "You are saving",
-    "you_might_also_like": "You might also like these products"
+    "you_might_also_like": "You might also like these products",
+    "add_to_cart": "Add to Cart",
+    "buy_now": "Buy Now"
   },
   "settings": {
     "addresses": "Addresses",
@@ -780,6 +1010,151 @@
     "order_number": "Order Number",
     "order_date": "Order Date",
     "order_total": "Order Total",
-    "view_details": "View Details"
+    "view_details": "View Details",
+    "cancel_confirm_title": "Confirm Order Cancellation",
+    "refund_amount": "Estimated Refund Amount",
+    "deficit_notice": "For cancellation due to change of mind, round-trip shipping fee (₩6,000) will be deducted.",
+    "payment_request_failed": "Payment request failed.",
+    "pay_shipping_fee": "Pay Shipping Fee",
+    "deficit_payment_info": "Additional payment is required as the order amount is less than the round-trip shipping fee (₩6,000).",
+    "payment_amount": "Payment Amount",
+    "loading_payment": "Loading payment methods...",
+    "cancel_success": "Order has been cancelled successfully.",
+    "cancel_failed": "Failed to cancel the order.",
+    "order_cancel_error": "An error occurred while cancelling the order."
+  },
+  "reviews": {
+    "my_reviews": "My Reviews",
+    "no_reviews": "No reviews written.",
+    "product_name": "Product Name",
+    "comment": "Comment",
+    "rating": "Rating",
+    "date": "Date",
+    "edit_review": "Edit Review",
+    "delete_review": "Delete Review"
+  },
+  "offers": {
+    "all_categories": "All Categories",
+    "any_discount": "Any Discount",
+    "average_discount": "Average Discount",
+    "breadcrumb_offers": "Offers",
+    "category": "Category",
+    "clear_all_filters": "Clear All Filters",
+    "clear_filters": "Clear Filters",
+    "description": "Discover the best products at up to {{discount}}% off!",
+    "exclusive_deals": "Exclusive Deals",
+    "filter_by_category": "Filter by Category",
+    "filters": "Filters",
+    "highest_discount": "Highest Discount",
+    "highest_rated": "Highest Rated",
+    "hurry_up_deals": "Hurry up! Amazing deals ending soon",
+    "limited_time": "Limited Time",
+    "load_more_offers": "Load More Offers",
+    "lowest_discount": "Lowest Discount",
+    "maximum_discount": "Maximum Discount",
+    "mega_sale_event": "Mega Sale Event!",
+    "min_discount": "Min Discount",
+    "minimum_discount": "Minimum Discount",
+    "name_a_to_z": "Name A to Z",
+    "no_offers_found": "No offers found matching your criteria.",
+    "offers_found": "{{count}} offers found",
+    "percent_10_or_more": "10% or more",
+    "percent_20_or_more": "20% or more",
+    "percent_30_or_more": "30% or more",
+    "percent_40_or_more": "40% or more",
+    "percent_50_or_more": "50% or more",
+    "percent_off": "% OFF",
+    "price_high_to_low": "Price: High to Low",
+    "price_low_to_high": "Price: Low to High",
+    "title": "Special Offers",
+    "try_adjusting_filters": "Try adjusting your filters to find different products."
+  },
+  "products": {
+    "all_products": "All Products",
+    "breadcrumb_home": "Home",
+    "breadcrumb_products": "Products",
+    "breadcrumb_separator": "/",
+    "discover_collection": "Discover our full collection of {{count}} products",
+    "end_of_list": "End of list",
+    "found_products": "{{count}} products found",
+    "grid_view": "Grid View",
+    "in_stock": "In Stock",
+    "list_view": "List View",
+    "loading_more": "Loading more...",
+    "no_products_found": "No products found.",
+    "product_header": "Products",
+    "search_results_for": "Search results for \"{{query}}\"",
+    "showing_products": "Showing {{displayed}} of {{total}} products",
+    "sort_by": "Sort By",
+    "sort_default": "Default",
+    "sort_name_asc": "Name: A to Z",
+    "sort_name_desc": "Name: Z to A",
+    "sort_price_high": "Price: High to Low",
+    "sort_price_low": "Price: Low to High",
+    "sort_rating": "Highest Rated",
+    "upon_purchase": "upon purchase!",
+    "you_are_saving": "You are saving"
+  },
+  "shipping_modal": {
+    "benefits": {
+      "items": [
+        "전 상품 5만원 이상 구매 시 배송비 0원",
+        "일부 상품 한정 전액 무료 배송",
+        "도서 산간 지역 추가 배송비 할인"
+      ],
+      "title": "Free Shipping Benefits"
+    },
+    "close_button": "Close",
+    "coverage_area": "Delivery Coverage",
+    "coverage_area_description": "We deliver nationwide (additional fees may apply for remote areas)",
+    "cta": "Continue Shopping",
+    "delivery_time": "Delivery Time",
+    "delivery_time_description": "Delivered within 1-3 days after payment (excluding remote areas)",
+    "free_on_orders": "Free shipping on orders over {{amount}}",
+    "free_shipping_description": "Enjoy free nationwide shipping on orders over {{amount}}",
+    "steps": {
+      "cart": {
+        "description": "Add your desired items to the cart.",
+        "title": "Step 1: Add to Cart"
+      },
+      "checkout": {
+        "description": "Check the free shipping message in your cart and proceed to checkout.",
+        "title": "Step 3: Free Shipping Applied"
+      },
+      "threshold": {
+        "description": "Free shipping is applied when your total purchase amount reaches the threshold.",
+        "title": "Step 2: Meet the Threshold"
+      }
+    },
+    "subtitle": "Check our shipping policy",
+    "term_1": "Delivery period is based on business days after payment",
+    "term_2": "Remote areas may require 1-2 additional days",
+    "term_3": "Delivery may be delayed during natural disasters or holidays",
+    "term_4": "Exact delivery date will be notified via message after ordering",
+    "terms_and_conditions": "Shipping Terms and Conditions",
+    "title": "Free Shipping Information",
+    "tracking": "Delivery Tracking",
+    "tracking_description": "A tracking number will be provided after order confirmation"
+  },
+  "wishlist": {
+    "add_to_cart": "Add to Cart",
+    "added_to_cart_success": "Added to cart!",
+    "browse_products": "Browse Products",
+    "clear_all": "Clear All",
+    "clear_all_confirm": "Are you sure you want to clear all wishlist items?",
+    "cleared_success": "Wishlist has been cleared",
+    "continue_shopping": "Continue Shopping",
+    "empty_desc": "Click the heart icon on products you like to add them to your wishlist",
+    "empty_title": "Your wishlist is empty",
+    "items_count": "{{count}} items",
+    "no_items": "No wishlist items.",
+    "remove_item": "Remove",
+    "remove_tooltip": "Remove",
+    "removed_success": "Removed from wishlist",
+    "sign_in_button": "Sign In",
+    "sign_in_desc": "Please sign in to view your wishlist",
+    "sign_in_required": "Sign in required",
+    "title": "Wishlist",
+    "view_details_tooltip": "View Details"
   }
 }
