--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -190,7 +190,16 @@
     "yes": "예",
     "your_order_is_currently_being": "주문하신 상품이 현재 {{status}} 상태입니다.",
     "zipcode": "우편번호",
-    "zipcode_required": "우편번호는 필수입니다"
+    "zipcode_required": "우편번호는 필수입니다",
+    "add_card": "添加卡片",
+    "card_added": "卡片已添加",
+    "card_deleted": "卡片已删除",
+    "delete_card": "删除卡片",
+    "delete_card_confirm": "确定要删除此卡片吗？",
+    "no_payment_methods": "没有已注册的支付方式",
+    "delete_orders": "删除所选",
+    "delete_orders_confirm": "确定要删除所选订单记录吗？\n此操作无法撤销。",
+    "shipping_address": "收货地址"
   },
   "admin": {
     "analytics": {
@@ -395,7 +404,11 @@
     "login": "登录",
     "logout": "注销",
     "register": "注册",
-    "sign_out": "注销"
+    "sign_out": "注销",
+    "logout_error": "注销时发生错误。",
+    "logout_success": "已成功注销。",
+    "sign_out_of_account": "退出登录",
+    "view_profile": "查看个人资料"
   },
   "banner": {
     "buy_now": "立即购买",
@@ -554,7 +567,9 @@
     "womens_watches_desc": "美丽的女士腕表",
     "womens_watches_name": "女士腕表",
     "불교_name": "宗教",
-    "불교용품_name": "宗教用品"
+    "불교용품_name": "宗教用品",
+    "page_title": "商品分类",
+    "스포츠_name": "体育"
   },
   "common": {
     "add_to_cart": "加入购物车",
@@ -577,7 +592,41 @@
     "shop_now": "立即购买",
     "updating": "更新中...",
     "view_all_categories": "查看所有分类",
-    "view_more": "查看更多"
+    "view_more": "查看更多",
+    "about": "关于",
+    "items": "상품",
+    "actions": "操作",
+    "added_to_cart": "已加入购物车！",
+    "adding_to_cart": "添加中...",
+    "admin_dashboard": "管理员面板",
+    "brand": "品牌",
+    "category": "分类",
+    "close": "关闭",
+    "date": "日期",
+    "delete": "删除",
+    "delete_selected": "删除所选",
+    "deleting": "删除中...",
+    "download": "下载",
+    "edit": "编辑",
+    "filter": "筛选",
+    "in_cart": "已在购物车",
+    "in_category": "分类：",
+    "nothing_matched_with": "没有匹配的结果：",
+    "open": "打开",
+    "optional": "可选",
+    "out_of_stock": "缺货",
+    "please_try_again": "请使用其他关键词再试一次",
+    "privacy": "隐私政策",
+    "quantity": "수량",
+    "searching_for": "正在搜索 \"{{query}}\"...",
+    "trending_products": "热门商品",
+    "start_shopping": "开始购物",
+    "support": "客服支持",
+    "terms": "服务条款",
+    "try_again": "重试",
+    "unit_price": "单价",
+    "version": "版本",
+    "view": "查看"
   },
   "filters": {
     "no_colors": "无可用颜色",
@@ -634,7 +683,36 @@
     "special_offers": "特价优惠",
     "special_offers_sub": "不要错过这些专属折扣",
     "unable_to_load_categories": "暂时无法加载分类，请稍后再试。",
-    "up_to_off": "最高 50% 折扣"
+    "up_to_off": "最高 50% 折扣",
+    "all_categories": "全部分类",
+    "any_discount": "任意折扣",
+    "category": "分类",
+    "clear_all_filters": "清除所有筛选",
+    "clear_filters": "清除筛选",
+    "exclusive_deals": "独家优惠",
+    "filter_by_category": "按分类筛选",
+    "filters": "筛选",
+    "highest_discount": "最高折扣",
+    "highest_rated": "最高评分",
+    "hurry_up_deals": "快来抢购！超值优惠即将结束",
+    "load_more_offers": "加载更多优惠",
+    "lowest_discount": "最低折扣",
+    "maximum_discount": "最大折扣",
+    "min_discount": "最低折扣",
+    "minimum_discount": "最小折扣",
+    "name_a_to_z": "名称 A 到 Z",
+    "no_offers_found": "没有找到符合条件的优惠。",
+    "offers_found": "找到 {{count}} 个优惠",
+    "percent_10_or_more": "10%以上",
+    "percent_20_or_more": "20%以上",
+    "percent_30_or_more": "30%以上",
+    "percent_40_or_more": "40%以上",
+    "percent_50_or_more": "50%以上",
+    "percent_off": "% 折扣",
+    "price_high_to_low": "价格：从高到低",
+    "price_low_to_high": "价格：从低到高",
+    "sort_by": "排序",
+    "try_adjusting_filters": "尝试调整筛选条件以查找不同的商品。"
   },
   "navigation": {
     "cart": "购物车",
@@ -642,7 +720,8 @@
     "home": "首页",
     "offers": "特价",
     "orders": "订单",
-    "products": "产品"
+    "products": "产品",
+    "menu": "菜单"
   },
   "product": {
     "add_to_favorite": "添加到收藏",
@@ -659,7 +738,11 @@
     "upon_purchase": "！",
     "view_details": "查看详情",
     "viewers_watching": "现在有超过 {{count}} 位用户正在查看此商品",
-    "you_are_saving": "您节省了"
+    "you_are_saving": "您节省了",
+    "add_to_cart": "加入购物车",
+    "buy_now": "立即购买",
+    "related_products": "관련 상품",
+    "you_might_also_like": "이런 상품은 어떠세요?"
   },
   "settings": {
     "addresses": "管理收货地址",
@@ -764,6 +847,314 @@
     "order_number": "订单号",
     "order_date": "订单日期",
     "order_total": "支付总额",
-    "view_details": "查看详情"
+    "view_details": "查看详情",
+    "cancel_confirm_title": "确认取消订单",
+    "refund_amount": "预计退款金额",
+    "deficit_notice": "因个人原因取消时，将扣除往返运费（6,000韩元）。",
+    "payment_request_failed": "支付请求失败。",
+    "pay_shipping_fee": "支付运费",
+    "deficit_payment_info": "订单金额低于往返运费（6,000韩元），需要额外支付。",
+    "payment_amount": "支付金额",
+    "loading_payment": "正在加载支付方式...",
+    "cancel_success": "订单已成功取消。",
+    "cancel_failed": "取消订单失败。",
+    "order_cancel_error": "取消订单时发生错误。"
+  },
+  "checkout": {
+    "account_security": "账户安全",
+    "address_line_1": "地址1",
+    "address_line_2": "地址2（可选）",
+    "advertising": "广告",
+    "agree_to_terms": "同意条款和条件",
+    "analytics": "分析",
+    "annually": "每年",
+    "apple_pay": "Apple Pay",
+    "apply_coupon": "使用",
+    "back_in_stock": "到货通知",
+    "bank_transfer": "银行转账",
+    "billing_address": "账单地址",
+    "billing_details": "订购人信息",
+    "billing_info": "账单信息",
+    "billing_zip": "账单邮编",
+    "card_number": "卡号",
+    "cardholder_name": "持卡人姓名",
+    "cash_on_delivery": "货到付款",
+    "cash_on_delivery_desc": "收货时付款",
+    "change_payment": "更改支付方式",
+    "checkout_process": "结算流程",
+    "choose_payment_method": "결제 수단을 선택해주세요",
+    "city": "城市",
+    "company": "公司",
+    "complete_order": "完成订单",
+    "confirm_cash_on_delivery": "确认货到付款",
+    "confirm_order": "确认订单",
+    "contact_info": "联系信息",
+    "contact_preferences": "联系偏好设置",
+    "cookie_policy": "Cookie政策",
+    "country": "国家",
+    "coupon_code": "优惠券代码",
+    "credit_card": "信用卡",
+    "custom": "自定义",
+    "cvv": "CVV",
+    "daily": "每天",
+    "data_usage": "数据使用",
+    "debit_card": "借记卡",
+    "delivery_instructions": "配送要求",
+    "different_billing": "使用不同的账单地址",
+    "digest": "摘要",
+    "discount": "折扣",
+    "email": "电子邮件",
+    "estimated_delivery": "预计送达",
+    "loading_checkout": "결제 화면을 불러오는 중...",
+    "loading_order_details": "주문 정보를 불러오는 중...",
+    "expiry_date": "有效期",
+    "express_shipping": "快递配送",
+    "first_name": "名",
+    "frequency": "频率",
+    "full_name": "姓名",
+    "full_refund": "全额退款",
+    "gift_card": "礼品卡",
+    "gift_message": "礼品留言",
+    "google_pay": "Google Pay",
+    "immediately": "立即",
+    "installment": "分期付款",
+    "items_total": "商品总额",
+    "kakao_pay": "Kakao Pay",
+    "last_name": "姓",
+    "login_alerts": "登录提醒",
+    "manage_preferences": "管理偏好设置",
+    "marketing_emails": "营销邮件",
+    "mobile_payment": "手机支付",
+    "monthly": "每月",
+    "monthly_payment": "月付",
+    "naver_pay": "Naver Pay",
+    "never": "从不",
+    "new_card": "新卡",
+    "newsletter_signup": "订阅通讯",
+    "opt_out": "退出",
+    "order_confirmation": "订单确认",
+    "order_date": "订单日期",
+    "order_items": "商品 ({{count}})",
+    "order_number": "订单号",
+    "order_placed": "订单已提交",
+    "order_review": "订单审核",
+    "order_summary": "주문 요약",
+    "order_number_label": "주문 번호",
+    "order_not_found": "주문을 찾을 수 없습니다",
+    "order_not_found_desc": "요청하신 주문 정보를 찾을 수 없습니다.",
+    "order_updates": "订单更新",
+    "partial_refund": "部分退款",
+    "password_changes": "密码更改",
+    "pay_in_full": "全额支付",
+    "pay_with_card": "卡支付",
+    "payment_declined": "支付被拒绝",
+    "payment_error": "支付错误",
+    "payment_failed": "支付失败",
+    "payment_method": "결제 방법",
+    "payment_options": "支付选项",
+    "payment_processing": "支付处理中",
+    "payment_cancelled": "결제 취소",
+    "payment_cancelled_desc": "결제가 취소되었습니다. 원하실 때 다시 결제를 시도하실 수 있습니다.",
+    "pay_now": "결제하기",
+    "please_sign_in": "로그인이 필요합니다",
+    "preparing_payment": "결제 준비 중...",
+    "payment_successful": "支付成功",
+    "paypal": "PayPal",
+    "personalization": "个性化",
+    "phone": "电话号码",
+    "place_order": "提交订单",
+    "points": "积分",
+    "price_drop": "降价提醒",
+    "privacy_policy": "隐私政策",
+    "processing": "처리 중...",
+    "sign_in": "로그인",
+    "sign_in_required_desc": "주문을 완료하려면 로그인이 필요합니다.",
+    "processing_order": "订单处理中",
+    "product_recommendations": "商品推荐",
+    "promotional_offers": "促销优惠",
+    "quarterly": "每季度",
+    "real_time": "实时",
+    "refund": "退款",
+    "refund_completed": "退款完成",
+    "refund_policy": "退款政策",
+    "refund_processing": "退款处理中",
+    "retry_payment": "重试支付",
+    "review_reminders": "评价提醒",
+    "same_as_shipping": "与收货地址相同",
+    "samsung_pay": "Samsung Pay",
+    "save_card": "保存卡信息",
+    "scheduled": "定时",
+    "secure_payment": "安全支付",
+    "secure_payment_via_stripe": "通过Stripe安全支付",
+    "select_payment_method": "选择支付方式",
+    "shipping_address": "배송 주소",
+    "shipping_info": "配送信息",
+    "shipping_method": "配送方式",
+    "sms_notifications": "短信通知",
+    "special_instructions": "特别要求",
+    "split_payment": "分开支付",
+    "ssl_encrypted": "SSL加密",
+    "standard_shipping": "标准配送",
+    "state": "省/州",
+    "step": "步骤",
+    "step_1": "步骤1",
+    "step_2": "步骤2",
+    "step_3": "步骤3",
+    "step_4": "步骤4",
+    "store_credit": "商店积分",
+    "suspicious_activity": "可疑活动",
+    "tax": "税费",
+    "terms_and_conditions": "条款和条件",
+    "thank_you": "谢谢",
+    "third_party": "第三方",
+    "title": "结算",
+    "toss": "Toss",
+    "toss_payments": "Toss支付",
+    "toss_payments_desc": "简便支付（信用卡、转账、手机等）",
+    "total": "总计",
+    "total_amount": "총액",
+    "tracking_number": "快递单号",
+    "unsubscribe": "取消订阅",
+    "view_orders": "주문 내역 보기",
+    "widget_load_failed": "결제 시스템 로드 실패",
+    "use_saved_card": "使用已保存的卡",
+    "virtual_account": "虚拟账户",
+    "weekly": "每周",
+    "wishlist_updates": "愿望清单更新",
+    "zip_code": "邮编"
+  },
+  "reviews": {
+    "my_reviews": "我的评价",
+    "no_reviews": "暂无评价。",
+    "product_name": "商品名称",
+    "comment": "内容",
+    "rating": "评分",
+    "date": "日期",
+    "edit_review": "编辑评价",
+    "delete_review": "删除评价"
+  },
+  "offers": {
+    "all_categories": "全部分类",
+    "any_discount": "任意折扣",
+    "average_discount": "平均折扣",
+    "breadcrumb_offers": "优惠",
+    "category": "分类",
+    "clear_all_filters": "清除所有筛选",
+    "clear_filters": "清除筛选",
+    "description": "发现最高{{discount}}%折扣的优质商品！",
+    "exclusive_deals": "独家优惠",
+    "filter_by_category": "按分类筛选",
+    "filters": "筛选",
+    "highest_discount": "最高折扣",
+    "highest_rated": "最高评分",
+    "hurry_up_deals": "快来抢购！超值优惠即将结束",
+    "limited_time": "限时",
+    "load_more_offers": "加载更多优惠",
+    "lowest_discount": "最低折扣",
+    "maximum_discount": "最大折扣",
+    "mega_sale_event": "超级促销活动！",
+    "min_discount": "最低折扣",
+    "minimum_discount": "最小折扣",
+    "name_a_to_z": "名称 A 到 Z",
+    "no_offers_found": "没有找到符合条件的优惠。",
+    "offers_found": "找到 {{count}} 个优惠",
+    "percent_10_or_more": "10%以上",
+    "percent_20_or_more": "20%以上",
+    "percent_30_or_more": "30%以上",
+    "percent_40_or_more": "40%以上",
+    "percent_50_or_more": "50%以上",
+    "percent_off": "% 折扣",
+    "price_high_to_low": "价格：从高到低",
+    "price_low_to_high": "价格：从低到高",
+    "title": "特别优惠",
+    "try_adjusting_filters": "尝试调整筛选条件以查找不同的商品。"
+  },
+  "products": {
+    "all_products": "全部商品",
+    "breadcrumb_home": "首页",
+    "breadcrumb_products": "商品",
+    "breadcrumb_separator": "/",
+    "discover_collection": "探索我们的{{count}}件商品",
+    "end_of_list": "已到底部",
+    "found_products": "找到 {{count}} 件商品",
+    "grid_view": "网格视图",
+    "in_stock": "有货",
+    "list_view": "列表视图",
+    "loading_more": "加载更多...",
+    "no_products_found": "没有找到商品。",
+    "product_header": "商品",
+    "search_results_for": "\"{{query}}\" 的搜索结果",
+    "showing_products": "显示 {{displayed}} / {{total}} 件商品",
+    "sort_by": "排序",
+    "sort_default": "默认",
+    "sort_name_asc": "名称：A 到 Z",
+    "sort_name_desc": "名称：Z 到 A",
+    "sort_price_high": "价格：从高到低",
+    "sort_price_low": "价格：从低到高",
+    "sort_rating": "最高评分",
+    "upon_purchase": "购买即可享受！",
+    "you_are_saving": "您节省了"
+  },
+  "shipping_modal": {
+    "benefits": {
+      "items": [
+        "전 상품 5만원 이상 구매 시 배송비 0원",
+        "일부 상품 한정 전액 무료 배송",
+        "도서 산간 지역 추가 배송비 할인"
+      ],
+      "title": "免费配送优惠"
+    },
+    "close_button": "关闭",
+    "coverage_area": "配送范围",
+    "coverage_area_description": "全国配送（偏远地区可能需要额外费用）",
+    "cta": "继续购物",
+    "delivery_time": "配送时间",
+    "delivery_time_description": "付款后1-3天内送达（偏远地区除外）",
+    "free_on_orders": "满{{amount}}免运费",
+    "free_shipping_description": "满{{amount}}享受全国免费配送",
+    "steps": {
+      "cart": {
+        "description": "将您喜欢的商品加入购物车。",
+        "title": "步骤1：加入购物车"
+      },
+      "checkout": {
+        "description": "在购物车中确认免运费信息后结算。",
+        "title": "步骤3：享受免运费"
+      },
+      "threshold": {
+        "description": "当您的总购买金额达到门槛时，将享受免运费。",
+        "title": "步骤2：达到门槛"
+      }
+    },
+    "subtitle": "查看我们的配送政策",
+    "term_1": "配送期限以付款后工作日为准",
+    "term_2": "偏远地区可能需要额外1-2天",
+    "term_3": "自然灾害或节假日期间可能延迟",
+    "term_4": "订购后将通过消息通知确切的送达日期",
+    "terms_and_conditions": "配送条款",
+    "title": "免费配送信息",
+    "tracking": "配送跟踪",
+    "tracking_description": "订单确认后将提供快递单号"
+  },
+  "wishlist": {
+    "add_to_cart": "加入购物车",
+    "added_to_cart_success": "已加入购物车！",
+    "browse_products": "浏览商品",
+    "clear_all": "清空全部",
+    "clear_all_confirm": "确定要清空所有愿望清单吗？",
+    "cleared_success": "愿望清单已清空",
+    "continue_shopping": "继续购物",
+    "empty_desc": "点击商品上的心形图标将其添加到愿望清单",
+    "empty_title": "愿望清单为空",
+    "items_count": "{{count}} 件商品",
+    "no_items": "没有愿望清单商品。",
+    "remove_item": "移除",
+    "remove_tooltip": "移除",
+    "removed_success": "已从愿望清单移除",
+    "sign_in_button": "登录",
+    "sign_in_desc": "请登录查看您的愿望清单",
+    "sign_in_required": "需要登录",
+    "title": "愿望清单",
+    "view_details_tooltip": "查看详情"
   }
 }
